# common_crate

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: doc_upload.yaml  test_on_linux.yaml  teste_no_linux.yaml
benches/: find_in_path.rs  key_value.rs  parse_array.rs
docs/: future.md
examples/: size_find_in_path.rs  size_main.rs  size_which.rs
procedural/: Cargo.toml
procedural/src/: command.rs  env_tokens.rs  lib.rs  main.rs  stack_string.rs
src/: fmt.rs  lib.rs  main.rs  readme.md  test_path.rs
src/console/: call_console.rs  iprintln.rs  mod.rs  pathtree.rs  pause.rs  read_host.rs
src/console/windows/: call_console.rs  mod.rs
src/data_system/: if_empty.rs  key_value.rs  mod.rs  parse_array.rs  parse_vec.rs
src/ds/: mod.rs  normalized.rs  num_ext.rs  parse_array.rs  parse_vec.rs  wildmatch.rs
src/fs/: bytes.rs  copy_dir.rs  expand_path.rs  extends_path.rs  find_in_path.rs  metaprograming.rs  metaprogramming.rs  mod.rs  windows.rs
src/language/: all.rs  current.rs  installed.rs  mod.rs
src/metaprograming/: func_size.rs  mod.rs
src/metaprogramming/: func_size.rs  inpl.rs  mod.rs
tests/: command.ps1  copy_dir.rs  data_system.rs  extends_path.rs  find_in_path.rs  language.rs  read_dirs.rs  read_host.rs  wildmatch.rs
