[package]
name = "common_crate"
version = "0.1.0"
edition = "2024"
default-run = "common_crate"

[workspace]
members = ["procedural"]
resolver = "3"

[dependencies]
rayon = { version = "1.11.0", default-features = false } # copy_dir
procedural = { path = "procedural" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", default-features = false, features = ["std", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false }
which = "8.0.0" # competidor do find_in_path
walkdir = "2.3.4" # competidor ganhador do read_dirs
wildmatch = "2.6.1" # competidor do match_wildcard

[[bench]]
name = "key_value"
harness = false
[[bench]]
name = "parse_array"
harness = false
[[bench]]
name = "find_in_path"
harness = false
